--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,7 @@
 bookdown::gitbook:
   css: style.css
   includes:
-  in_header: mathjax-macros.html
+    in_header: mathjax-macros.html
   config:
     toc:
       before: |
@@ -10,10 +10,14 @@ bookdown::gitbook:
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
     download: ["pdf", "epub"]
+  split_bib: true  
+  
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
   latex_engine: xelatex
-  citation_package: natbib
+  #citation_package: natbib
+  citation_package: none  
   keep_tex: yes
+  split_bib: true  
 bookdown::epub_book: default
